--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -17,26 +17,24 @@ ul
 ul.dropdown-menu.login
   padding-top: 10px
   li
-    margin-right: 10px
-    margin-left: 10px
-    margin-bottom: 10px
+    margin: 0 10px 10px 10px
     width: 200px
   a.btn
-    width: 100%
     color: white
     i
-      margin-left: -10px
       float: left
-      margin-bottom: -10px
-      margin-top: -5px
-  
+      margin: -5px 0 -10px -10px
+  a.btn.btn-danger:hover
+    background: #d43f3a
+  a.btn.btn-primary:hover
+    background-color: #3276b1
 
 .dropdown
   i.icon-user
     opacity: 0.5
   a:hover i.icon-user, a:focus i.icon-user, &.open i.icon-user
     opacity: 1
-    
+
 .navbar 
   margin-bottom: 0px
   border-radius: 0px
