--- a/wsgi/openshift/templates/home/welcome_page.html
+++ b/wsgi/openshift/templates/home/welcome_page.html
@@ -5,7 +5,7 @@
             <div class="flatblock-content">je aplikace na procvičování znalosti slepých map.
         Aplikace přizpůsobuje obtížnost otázek znalostem studenta.</div>
         </div>
-      <a href="#/practice/" class="btn btn-primary btn-large btn-huge" >Začít procvičovat</a>
+      <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat</a>
       </div>
   </center>
         {% include "home/how_it_works.html" %}
