--- a/wsgi/openshift/geography/static/sass/_responsive.sass
+++ b/wsgi/openshift/geography/static/sass/_responsive.sass
@@ -22,7 +22,7 @@
   .welcome-page.jumbotron
     font-size: 1em
     h1
-      font-size: 2em
+      font-size: 3em
       margin-top: 0px
       padding-top: 10px
     p
@@ -33,7 +33,7 @@
     .flatblock
       padding: 10px 0px
   .jumbotron 
-    padding: 0px
+    padding: 0 0 20px 0
   h2
     font-size: 16px
   .well
@@ -55,6 +55,8 @@
       line-height: 14px
   #footer
     font-size: 0.7em
+  .how-it-works
+    padding 10px
     
 @media (min-width: 767px)
   $huge-radius: 9px
