css source maps

--- a/wsgi/openshift/geography/static/css/app.css
+++ b/wsgi/openshift/geography/static/css/app.css
@@ -483,3 +483,5 @@ html, body {
     -webkit-border-radius: 9px;
     -moz-border-radius: 9px;
     border-radius: 9px; } }
+
+/*# sourceMappingURL=app.css.map */
