--- a/wsgi/openshift/geography/static/css/map.css
+++ b/wsgi/openshift/geography/static/css/map.css
@@ -8,3 +8,5 @@ svg .states:hover, svg .lakes:hover {
   fill-opacity: 0.8; }
 svg .lakes {
   stroke: #53a5df; }
+
+/*# sourceMappingURL=map.css.map */
