--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -6,7 +6,6 @@ body
   font-size: 1.5em
   li
     list-style-type: none
-.label
 
 h1, h2, h3
   font-weight: bold
@@ -84,6 +83,7 @@ ul.dropdown-menu.login
     padding-left: 30px
     .btn
       margin-top: -5px
+      font-weight: bold
 
 .label
   margin-right: 10px
