--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -74,11 +74,26 @@
         </ul>
           ...
             <ul class="nav ng-cloak navbar-nav pull-right">
-                <li class="dropdown" ng-show="user.username == ''">
-                  <a id="drop-login" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">Přihlásit se <b class="caret"></b></a>
+                <li class="dropdown" ng-show="user.username == ''" >
+                  <a id="drop-login" 
+                     href="" 
+                     role="button" 
+                     class="dropdown-toggle atooltip drop-login"
+                     title="Přihlašte se jednoduše přes Google nebo Facebook, aby si systém váše znalosti pamatoval i příště."
+                     data-toggle="dropdown">
+                    Přihlásit se <b class="caret"></b>
+                  </a>
                   <ul class="dropdown-menu login" role="menu" aria-labelledby="drop-login">
-                    <li><a class="btn btn-danger btn-lg btn-block" href="/login/google/"><i class="social-google"></i> přes Google</a></li>
-                    <li><a class="btn btn-primary btn-lg btn-block" href="/login/facebook/"><i class="social-facebook"></i> přes Facebook</a></li>
+                    <li>
+                      <a class="btn btn-danger btn-lg btn-block" href="/login/google/">
+                        <i class="social-google"></i> přes Google
+                      </a>
+                    </li>
+                    <li>
+                      <a class="btn btn-primary btn-lg btn-block" href="/login/facebook/">
+                        <i class="social-facebook"></i> přes Facebook
+                      </a>
+                    </li>
                   </ul>
                 </li>
                 <li class="dropdown" ng-show="user.username != ''">
