--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -59,11 +59,24 @@ ul.dropdown-menu.login
 .view-places
   margin: 10px
 
+.horizontal
+  .map-container
+    width: 70%
+    float: right
+  #container
+    width: 30%
+    float: left
+    .col-sm-7, .col-sm-5
+      width: 100%
+      padding: 0
+
 #container
   margin-left: auto
   margin-right: auto
   float: none
   position: relative
+
+.practice
   h2
     padding-left: 30px
 
