--- a/wsgi/openshift/geography/static/sass/_responsive.sass
+++ b/wsgi/openshift/geography/static/sass/_responsive.sass
@@ -42,17 +42,25 @@
     #map-holder
       width: 100%
   .practice 
-    .btn-large
-      padding: 2px 10px
-      font-size: 11.9px
+    .btn-lg
+      padding: 3px 10px
+      font-size: 13.9px
       -webkit-border-radius: 3px
       -moz-border-radius: 3px
       border-radius: 3px
-      [class^="icon-"], [class*=" icon-"]
+      [class^="flag-"], [class^="icon-"], [class*=" icon-"]
         margin-top: 0
-    h2 .label
-      font-size: 11.844px
-      line-height: 14px
+    h2 
+      margin: 0
+      padding: 0 0 0 5px 
+      span
+        float: none
+        margin: 0
+      .label
+        font-size: 11.844px
+        line-height: 14px
+  .quesions-progress
+    margin-bottom: 0
   #footer
     font-size: 0.7em
   .how-it-works
