--- a/wsgi/openshift/templates/home/welcome_page.html
+++ b/wsgi/openshift/templates/home/welcome_page.html
@@ -3,9 +3,15 @@
       <div class="col-lg-8 col-sm-11 col-12">
         <div class="flatblock block-welcome_page">
             <div class="flatblock-content">je aplikace na procvičování znalosti slepých map.
-        Aplikace přizpůsobuje obtížnost otázek znalostem studenta.</div>
+              Aplikace přizpůsobuje obtížnost otázek znalostem studenta.
+            </div>
         </div>
-      <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat</a>
+      <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat svět</a>
+            <div class="flatblock-content">Kromě slepé mapy světa můžete procvičovat 
+              mapy jednotlivých kontinentů (Afrika, Severní a Jižní Amerika, Asie, ...) 
+              a vybraných států (USA, ČR, Německo, ...)
+            </div>
+        </div>
       </div>
   </center>
         {% include "home/how_it_works.html" %}
