--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -167,6 +167,7 @@ html, body
   [class*="col-"]
     float: none
   .block-welcome_page
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.8), 0 0 0px rgba(0, 0, 0, 0.075)
     font-size: 1.25em
     padding: 30px
     line-height: 150%
