--- a/wsgi/openshift/geography/static/css/map.css
+++ b/wsgi/openshift/geography/static/css/map.css
@@ -1,12 +1,2 @@
-svg .bg {
-  stroke-width: 1.5; }
-svg .states, svg .cities, svg .rivers, svg .lakes {
-  cursor: pointer; }
-svg .states, svg .cities, svg .lakes {
-  fill-opacity: 1; }
-svg .states:hover, svg .lakes:hover {
-  fill-opacity: 0.8; }
-svg .lakes {
-  stroke: #53a5df; }
-
+svg .bg{stroke-width:1.5}svg .states,svg .cities,svg .rivers,svg .lakes{cursor:pointer}svg .states,svg .cities,svg .lakes{fill-opacity:1}svg .states:hover,svg .lakes:hover{fill-opacity:0.8}svg .lakes{stroke:#53a5df}
 /*# sourceMappingURL=map.css.map */
