--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -69,6 +69,7 @@ ul.dropdown-menu.login
     .col-sm-7, .col-sm-5
       width: 100%
       padding: 0
+      margin-top: 10px
 
 #container
   margin-left: auto
