non breaking spaces

--- a/wsgi/openshift/templates/home/welcome_page.html
+++ b/wsgi/openshift/templates/home/welcome_page.html
@@ -6,9 +6,9 @@
               Aplikace přizpůsobuje obtížnost otázek znalostem studenta.
             </div>
             <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat svět</a>
-            <div class="flatblock-content">Kromě slepé mapy světa můžete procvičovat 
-              mapy jednotlivých kontinentů (Afrika, Severní a Jižní Amerika, Asie, ...) 
-              a vybraných států (USA, ČR, Německo, ...)
+            <div class="flatblock-content">Kromě slepé mapy světa můžete procvičovat
+              mapy jednotlivých kontinentů (Afrika, Severní a Jižní Amerika, Asie,&nbsp;...)
+              a vybraných států (USA, ČR, Německo,&nbsp;...)
             </div>
         </div>
       </div>
