--- a/wsgi/openshift/templates/home/how_it_works.html
+++ b/wsgi/openshift/templates/home/how_it_works.html
@@ -3,6 +3,12 @@
 <div class="col-md-offset-3 col-md-6">
 
 <div class="works-div">
+<h3>Zeměpis hrou</h3>
+Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému.
+Dokážete obarvit celou mapu na zeleno?
+</div>
+
+<div class="works-div">
 <h3>Adaptabilní procvičování</h3>
 Systém vás zkouší ze znalosti států, přičemž chování systému je adaptabilní - podle toho, jaké máte znalosti, systém volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování.
 Systém vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější.
