Improve horizontal mode design. Fixes #4

--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -41,8 +41,8 @@ ul.dropdown-menu.login
 .version
   border: 0px none currentColor
   right: 0px
+  top: 0px
   position: absolute
-  top: 50px
   z-index: 5
 
 .vip
@@ -62,14 +62,21 @@ ul.dropdown-menu.login
 .horizontal
   .map-container
     width: 70%
-    float: right
+    float: left
   #container
     width: 30%
-    float: left
+    float: right
     .col-sm-7, .col-sm-5
       width: 100%
       padding: 0
       margin-top: 10px
+    .label
+      white-space: normal
+    .btn
+      display: block
+  .practice
+    h2
+      padding-left: 10px
 
 #container
   margin-left: auto
