Flags style polished

--- a/wsgi/openshift/geography/static/lib/css/flags.css
+++ b/wsgi/openshift/geography/static/lib/css/flags.css
@@ -6,7 +6,7 @@
 	height: 11px;
 	position: relative;
 	display:inline-block;
-	margin-top: 8px;
+	margin: 5px 3px 0 3px;
 	background:url(../img/flags.png) no-repeat
 }
 
