Shorten google+ url

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -131,7 +131,7 @@
     <div id="footer">
         Vyvíjeno na <a href="http://www.fi.muni.cz/">FI MU</a>, všechny připomínky velmi vítány:
         <span class="email contact">slepemapy{zavinac}googlegroups.com</span>
-        <a class="contact" href="https://plus.google.com/u/0/b/104257242679455079956/104257242679455079956/">Google+</a>
+        <a class="contact" href="https://plus.google.com/+SlepemapyCz/">Google+</a>
         <a class="contact" href="https://www.facebook.com/slepemapy">Facebook</a>
     </div>
     <!-- Le javascript
