Add "Old browser" message to homepage

--- a/wsgi/openshift/templates/home/welcome_page.html
+++ b/wsgi/openshift/templates/home/welcome_page.html
@@ -1,3 +1,17 @@
+  <!--[if lte IE 8]>
+  <div class="alert alert-danger old-browser">
+    Používáte <b>zastaralou verzi prohlížeče</b>, ve které aplikace
+    <b>nemusí fungovat správně</b>. 
+    Pro optimální fungování aplikace doporučujeme nainstalovat 
+    aktuální verzi některého z běžně používaných prohlížečů. 
+    Například:
+    <a href="https://www.google.com/intl/cs/chrome/browser/">Google Chrome</a>,
+    <a href="http://www.mozilla.org/cs/firefox/new/">Firefox</a>,
+    <a href="http://windows.microsoft.com/cs-CZ/internet-explorer/download-ie">
+        Internet explorer
+    </a>
+  </div>
+  <![endif]-->
   <center class="map-container welcome-page jumbotron">
       <h1 >Slepé Mapy</h1>
       <div class="col-lg-8 col-sm-11 col-12">
