--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -189,6 +189,10 @@ html, body
   .works-div
     text-align: justify
 
+.old-browser
+  margin: 0
+  text-align: center
+
 @media (min-width: 767px)
   $huge-radius: 9px
   .btn-huge
