Allow to hide Cities/States on preview map

--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -100,7 +100,10 @@ ul.dropdown-menu.login
     background: rgba(0,0,0,0.05)
     margin: 0px -15px 0px -15px
     padding: 10px
-    padding-left: 30px
+    cursor: pointer
+    padding-left: 20px
+    i
+      padding-right: 10px
     .btn
       margin-top: -5px
       font-weight: bold
