Fix user icon in main menu

--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -96,7 +96,8 @@
                   </ul>
                 </li>
                 <li class="dropdown" ng-show="user.username != ''">
-                  <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="icon-user icon-white"></i> <span ng-bind="user.username"></span> <b class="caret"></b></a>
+                  <a id="drop1" href="" role="button" class="dropdown-toggle" data-toggle="dropdown">
+                    <i class="glyphicon glyphicon-user"></i> <span ng-bind="user.username"></span> <b class="caret"></b></a>
                   <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
                     <li class="forgot-pwd"><a href="" ng-click="logout()">Odhlásit se</a></li>
                   </ul>
