Improve and refactor homepage styles

--- a/wsgi/openshift/geography/static/sass/_global.sass
+++ b/wsgi/openshift/geography/static/sass/_global.sass
@@ -183,20 +183,24 @@ html, body
 .welcome-page.jumbotron
   h1
     font-size: 3em
-    position: relative
     text-align: center
+    position: relative
     left: 0
+    margin-top: 0px
   p
     font-size: 0.75em
-    padding: 30px
     line-height: 150%
   [class*="col-"]
     float: none
   .block-welcome_page
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.8), 0 0 0px rgba(0, 0, 0, 0.075)
     font-size: 1.25em
-    padding: 30px
     line-height: 150%
+    .flatblock-content
+      text-align: justify
+  .btn-centerer
+    text-align: center
+    margin: 20px auto 20px auto
 
 .how-it-works
   align: center
