--- a/wsgi/openshift/templates/home/how_it_works.html
+++ b/wsgi/openshift/templates/home/how_it_works.html
@@ -1,6 +1,6 @@
 <div class="how-it-works">
 <h2>Jak to funguje?</h2>
-<div class="col-md-offset-3 col-md-6">
+<div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
 <div class="works-div">
 <h3>Zeměpis hrou</h3>
