--- a/wsgi/openshift/templates/home/welcome_page.html
+++ b/wsgi/openshift/templates/home/welcome_page.html
@@ -12,19 +12,19 @@
     </a>
   </div>
   <![endif]-->
-  <center class="map-container welcome-page jumbotron">
+  <div class="map-container welcome-page jumbotron">
       <h1 >Slepé Mapy</h1>
-      <div class="col-lg-8 col-sm-11 col-12">
-        <div class="flatblock block-welcome_page">
-            <div class="flatblock-content">je aplikace na procvičování znalosti slepých map.
-              Aplikace přizpůsobuje obtížnost otázek znalostem studenta.
-            </div>
-            <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat svět</a>
-            <div class="flatblock-content">Kromě slepé mapy světa můžete procvičovat
-              mapy jednotlivých kontinentů (Afrika, Severní a Jižní Amerika, Asie,&nbsp;...)
-              a vybraných států (USA, ČR, Německo,&nbsp;...)
-            </div>
+      <div class="flatblock block-welcome_page col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
+        <div class="flatblock-content">je aplikace na procvičování znalosti slepých map.
+          Aplikace přizpůsobuje obtížnost otázek znalostem studenta.
+        </div>
+        <div class="btn-centerer">
+          <a href="#/practice/" class="btn btn-primary btn-lg btn-huge" >Začít procvičovat svět</a>
+        </div>
+        <div class="flatblock-content">Kromě slepé mapy světa můžete procvičovat
+          mapy jednotlivých kontinentů (Afrika, Severní a Jižní Amerika, Asie,&nbsp;...)
+          a vybraných států (USA, ČR, Německo,&nbsp;...)
         </div>
       </div>
-  </center>
+  </div>
         {% include "home/how_it_works.html" %}
