--- a/wsgi/openshift/geography/static/sass/_responsive.sass
+++ b/wsgi/openshift/geography/static/sass/_responsive.sass
@@ -1,11 +1,6 @@
-@media (max-width: 979px)
-  body
+@media (max-width: 767px)
   .version
     display: none
-
-@media (max-width: 767px)
-  body
-    padding-top: 0px
   .map-container
     height: auto
     h1
@@ -23,15 +18,12 @@
     font-size: 1em
     h1
       font-size: 3em
-      margin-top: 0px
       padding-top: 10px
     p
       font-size: 0.65em
       padding: 5px
     .main-paragraph
       font-size: 1em
-    .flatblock
-      padding: 10px 0px
   .jumbotron 
     padding: 0 0 20px 0
   h2
@@ -52,7 +44,7 @@
         margin-top: 0
     h2 
       margin: 0
-      padding: 0 0 0 5px 
+      padding: 5px 
       span
         float: none
         margin: 0
@@ -64,6 +56,8 @@
   #footer
     font-size: 0.7em
   .how-it-works
+    h2 
+      font-size: 30px
     padding 10px
     
 @media (min-width: 767px)
