Refactor style sheets

--- a/wsgi/openshift/geography/static/sass/_practice.sass
+++ b/wsgi/openshift/geography/static/sass/_practice.sass
@@ -3,6 +3,7 @@
     margin-left: 10px
     margin-bottom: 10px
   h2
+    padding-left: 30px
     .label
       font-size: 20px
       line-height: 30px
@@ -15,3 +16,22 @@
   border-radius: 0
   height: 10px
   margin-bottom: 15px
+
+.horizontal
+  .map-container
+    width: 70%
+    float: left
+  #container
+    width: 30%
+    float: right
+    .col-sm-7, .col-sm-5
+      width: 100%
+      padding: 0
+      margin-top: 10px
+    .label
+      white-space: normal
+    .btn
+      display: block
+  .practice
+    h2
+      padding-left: 10px
