--- a/wsgi/openshift/geography/static/sass/app.sass
+++ b/wsgi/openshift/geography/static/sass/app.sass
@@ -2,7 +2,9 @@
 @import "bootstrap-fixes"
 @import "global"
 
+@import "welcome-page"
 @import "map-container"
+@import "preview-map"
 @import "practice"
 
 @import "social"
