--- a/wsgi/openshift/geography/static/sass/_welcome-page.sass
+++ b/wsgi/openshift/geography/static/sass/_welcome-page.sass
@@ -29,3 +29,12 @@
   padding: 20px
   .works-div
     text-align: justify
+
+@media (min-width: 767px)
+  $huge-radius: 9px
+  .btn-huge
+    padding: 21px 29px
+    font-size: 27.5px
+    -webkit-border-radius: $huge-radius
+    -moz-border-radius: $huge-radius
+    border-radius: $huge-radius
