--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -105,26 +105,13 @@
               <li class="atooltip points" title="Body - přibývají za každou správnou odpověď" ng-show="user.points">
                 <a><span class="badge" ng-bind="user.points"></span></a>
               </li>
-              <!--<li class="dropdown">
-                  <a href="#" role="button" class="dropdown-toggle" data-toggle="dropdown"><i class="flag-{{ LANGUAGE_CODE}}"></i> <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                    {% for lang in LANGUAGES %}
-                    <li>
-                    <form action="/i18n/setlang/" method="post">{% csrf_token %}
-                        <input name="language" type="hidden" value="{{ lang.0 }}" />
-                        <button class="menu-link"><i class="flag-{{ lang.0 }}"></i> {{ lang.1 }}</button>
-                    </li>
-                    {% endfor %}
-                </ul>
-              </li>-->
             </ul>
         </div><!-- /.nav-collapse -->
       </div><!-- /.container -->
     </div>
     <!-- Main content
     ================================================== -->
-    <!--<a href="feedbackyform.html" id="fdbk_tab" class="fdbk_tab_left ">FEEDBACK</a>-->
-    <div data-ng-view id="ng-view" ng-animate="{enter: 'view-enter'}" ng-class="vip() && 'vip'">
+    <div data-ng-view id="ng-view" ng-class="vip() && 'vip'">
         {% include "home/welcome_page.html" %}
     </div>
   </div>
