--- a/wsgi/openshift/templates/home/home.html
+++ b/wsgi/openshift/templates/home/home.html
@@ -23,6 +23,8 @@
     <meta name="description" content="Adaptivní aplikace na procvičování slepých map<">
     <meta name="keywords" content="slepé mapy, státy, procvičování, svět, amerika, afrika, asie, usa" />
 
+    <link rel="shortcut icon" type="image/png" href="/favicon.ico"/>
+
     <!-- Le styles -->
     {% for file in top_css_files %}
     <link href="{{ file }}" rel="stylesheet">
