--- a/wsgi/openshift/geography/static/sass/_practice.sass
+++ b/wsgi/openshift/geography/static/sass/_practice.sass
@@ -9,9 +9,9 @@
   h2
     padding-left: 30px
     .label
-      font-size: 20px
+      font-size: 25px
       line-height: 30px
-      padding-bottom: 0
+      font-weight: bold
     span
       float: left
       margin-right: 20px
@@ -31,7 +31,7 @@
     .col-sm-7, .col-sm-5
       width: 100%
       padding: 0
-      margin-top: 10px
+      margin-top: 30px
     .label
       white-space: normal
     .btn
