--- a/wsgi/openshift/geography/static/sass/_welcome-page.sass
+++ b/wsgi/openshift/geography/static/sass/_welcome-page.sass
@@ -5,15 +5,12 @@
     position: relative
     left: 0
     margin-top: 0px
-  p
-    font-size: 0.75em
-    line-height: 150%
   [class*="col-"]
     float: none
   .block-welcome_page
     text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.8), 0 0 0px rgba(0, 0, 0, 0.075)
     font-size: 1.25em
-    line-height: 150%
+    line-height: 120%
     .flatblock-content
       text-align: justify
   .btn-centerer
@@ -28,7 +25,9 @@
   margin-top: -30px
   padding: 20px
   .works-div
+    font-size: 1.1em
     text-align: justify
+    margin-bottom: 30px
 
 @media (min-width: 767px)
   $huge-radius: 9px
