--- a/wsgi/openshift/geography/static/sass/map.sass
+++ b/wsgi/openshift/geography/static/sass/map.sass
@@ -1,12 +1,12 @@
 svg
   .bg
     stroke-width: 1.5
-  .states, .cities, .rivers, .lakes, .mountains
+  .state, .city, .river, .lake, .mountains
     cursor: pointer
-  .states, .cities, .lakes, .mountains
+  .state, .city, .lake, .mountains
     fill-opacity: 1
-  .states, .lakes, .mountains
+  .state, .lake, .mountains
     &:hover
       fill-opacity: 0.8
-  .lakes
+  .lake
     stroke: #53a5df
