--- a/wsgi/openshift/geography/static/sass/_practice.sass
+++ b/wsgi/openshift/geography/static/sass/_practice.sass
@@ -6,12 +6,15 @@
   .btn
     margin-left: 10px
     margin-bottom: 10px
-  h2
+  .question
+    font-size: 25px
+    font-weight: bold
     padding-left: 30px
     .label
-      font-size: 25px
-      line-height: 30px
+      font-size: 20px
+      line-height: 25px
       font-weight: bold
+      padding-bottom: 5px
     span
       float: left
       margin-right: 20px
