--- a/wsgi/openshift/geography/static/sass/_responsive.sass
+++ b/wsgi/openshift/geography/static/sass/_responsive.sass
@@ -42,7 +42,8 @@
       border-radius: 3px
       [class^="flag-"], [class^="icon-"], [class*=" icon-"]
         margin-top: 0
-    h2 
+    .question 
+      font-size: 16px
       margin: 0
       padding: 5px 
       span
@@ -55,9 +56,6 @@
     margin-bottom: 0
   #footer
     font-size: 0.7em
-  .how-it-works
-    h2 
-      font-size: 30px
     padding 10px
     
 @media (min-width: 767px)
