--- a/wsgi/openshift/templates/home/how_it_works.html
+++ b/wsgi/openshift/templates/home/how_it_works.html
@@ -3,29 +3,29 @@
 <div class="col-md-offset-1 col-md-10 col-lg-offset-3 col-lg-6">
 
 <div class="works-div">
-<h3>Zeměpis hrou</h3>
+<h3><i class="glyphicon glyphicon-flag"></i> Zeměpis hrou</h3>
 Procvičte si své znalosti zeměpisu hravou formou. V aktuální verzi zatím soutěžíte jen sami se sebou, respektive proti systému.
 Dokážete obarvit celou mapu na zeleno?
 </div>
 
 <div class="works-div">
-<h3>Adaptabilní procvičování</h3>
+<h3><i class="glyphicon glyphicon-dashboard"></i> Adaptabilní procvičování</h3>
 Systém vás zkouší ze znalosti států, přičemž chování systému je adaptabilní - podle toho, jaké máte znalosti, systém volí podobu otázek (otevřená, výběr z možností) a frekvenci opakování.
 Systém vám tak předkládá státy, jejichž procvičení je pro vás nejužitečnější.
 </div>
 
 <div class="works-div">
-<h3>Vizualizace znalostí</h3>
+<h3><i class="glyphicon glyphicon-picture"></i> Vizualizace znalostí</h3>
 Na základě odpovědí systém odhadne vaše znalosti jednotlivých států a znázorní vám mapu vašich znalostí, což vám pomůže ujasnit si, co vlastně umíte.
 </div>
 
 <div class="works-div">
-<h3>Specializovaný systém</h3>
+<h3><i class="glyphicon glyphicon-globe"></i> Specializovaný systém</h3>
 Procvičování slepých map nabízí i řada jiných výukových systémů, ty však většinou pokrývají mnoho dílčích oblastí. Náš systém se soustředí pouze na slepé mapy, díky čemuž je pro učení v této oblasti optimalizovaný.
 </div>
 
 <div class="works-div">
-<h3>Učení z dat</h3>
+<h3><i class="glyphicon glyphicon-stats"></i> Učení z dat</h3>
 Systém se učí z dat od všech uživatelů. Výběr otázek je založen na těchto datech, nikoliv na znalostech experta na zeměpis, který "ví", jestli je těžší poznat Keňu nebo Nigérii.
 </div>
 </div>
